# quant-tiny

./: .gitignore  README.md  default.nix  flake.nix  justfile  pyproject.toml  python-env.nix
.github/: dependabot.yml
.github/workflows/: update-flake-lock.yml
src/quant_tiny/: __init__.py  backtest.py  core.py  indicators.py
tests/: test_core.py
